--- a/app/templates/includes/og_tags.html
+++ b/app/templates/includes/og_tags.html
@@ -1,7 +1,4 @@
 <meta property="og:url" content="{{ request.base_url }}" />
 <meta property="og:title" content="{{ site_title }}" />
 <meta property="og:description" content="{{ site_description }}" />
-<meta
-  property="og:image"
-  content="{{ url_for('static', filename='images/zz.jpg') }}"
-/>
+<meta property="og:image" content="{{ url_for('static', filename='images/zz.jpg') }}" />
