--- a/app/templates/includes/site_verification.html
+++ b/app/templates/includes/site_verification.html
@@ -1,5 +1,2 @@
 <meta name="yandex-verification" content="e7813c16c95e8805" />
-<meta
-  name="google-site-verification"
-  content="tzf9F01bpT_jT8HXPo7Ia9Y3ZLFMUbH8aqdX7d6lRZQ"
-/>
+<meta name="google-site-verification" content="tzf9F01bpT_jT8HXPo7Ia9Y3ZLFMUbH8aqdX7d6lRZQ" />
